	* Full error precision toggle added to settings page of 'Convert To Indexed' window
	* Eliminated flicker when scrolling canvas in GTK+1 and GTK+2/Windows
	* Dragging the main/view window divider made to behave in GTK+1
	* Tile based undo system introduced to save memory when changes affect only small areas of the canvas
	* Max undo levels now configurable (from 10 to 1000)
	* mtPaint can now be compiled as a library (libmtpaint)
	* Main menu now rearranges itself to fit in window
	* Image rotation now sharper and faster
	* BUGFIX - Colour selective mode with zoom < 100% doesn't cause crash
	* BUGFIX - Gradient preview now properly shows effect of mask channel
	* BUGFIX - "Resize Canvas" with negative offset now works correctly
	* BUGFIX - Clipboard rotation now properly handles clipboard alpha
	* Lanczos3 rescaling filter removed due to unfavourable results

3.11	2007-4-2

	* Slovak translation added by Jozef Riha
	* French translation updated by Sylvain Cresto
	* LSS16 file format load/save added to support syslinux bootup splash screens
	* Clipboard alpha is now used as clipboard mask when pasting to image without alpha channel
	* "Resize Canvas" can now be used to offset an image, with or without changing its size
	* TIFF files with alpha saved by Photoshop now load properly
	* Bash-specific idioms in configure script replaced by POSIXy equivalents
	* Zoom combo boxes are now better behaved in GTK+1
	* DL3 quantizer now faster by about 30%
	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
	* BUGFIX - Keyboard shortcut for swapping colours A & B now works in GTK+1
	* BUGFIX - Clicking the palette grid in gradient editor now works properly in GTK+1
	* BUGFIX - All spin buttons are now wide enough in GTK+1